--- a/practice.CSS.html
+++ b/practice.CSS.html
@@ -8,11 +8,12 @@
         <body style="background-color:#078BA0"</body>
         <h1 align="middle"><em>Rosa Parks</em></h1>
         <style>p{border-style: double;}
-        ol {border-style: double;}
+        ol {border-style: dashed;}
+        h1 {border-style:solid;}
         </style>
          
         <hr/>
-        <h2 align="middle">Sitting Room For All</h2>
+        <h2 style="color:green;" align="middle">Sitting Room For All</h2>
         <br/>
         <hr/>
         <p align="middle">
