--- a/HTML/FavoriteAnimal.html
+++ b/HTML/FavoriteAnimal.html
@@ -17,17 +17,17 @@
 <div class="container">
   <div class="row">
     <div syle="background-color:green;" class="col-sm-4">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/ALiger.jpg/270px-ALiger.jpg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/ALiger.jpg/270px-ALiger.jpg" style="width:200px;height:200px;">
         <br>
       <p>Ligres, as described in the name, look exactly like a mix of a tiger and a lion</p>
     </div>
     <div class="col-sm-4">
-        <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Liger_Jungle_Island.jpg/220px-Liger_Jungle_Island.jpg">
+        <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Liger_Jungle_Island.jpg/220px-Liger_Jungle_Island.jpg" style="width:200px;height:200px;">
         <br>
       <p>Ligres are also very large in size.</p>
     </div>
     <div class="col-sm-4">
-        <img src="https://i.pinimg.com/736x/51/a7/73/51a7733729db6f35f6178f0310f8dad6.jpg"≥
+        <img src="https://i.pinimg.com/736x/51/a7/73/51a7733729db6f35f6178f0310f8dad6.jpg" style="width:200px;height:200px;"≥
         <br>
       <p>Ligre's patterns can also vary.</p>
       
