--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -23,7 +23,7 @@
       <div class="container">
         <div class="jumbotron text-center" style="background-color:green">
          <h1>Joe Kensik</h1>
-        <a href="#" class="btn btn-info" role="button">Basketball</a>
+        <a href="https://jkensik1.github.io/ECS21718/Final_Project/Page2.html" class="btn btn-info" role="button">Basketball</a>
         <a href="#" class="btn btn-info" role="button">Shoes</a>
   </div>
 <br>
