--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -30,10 +30,10 @@
 <h1>Weclome!</h1>
 <h3>Some facts about me:</h3>
 <p>-Currently Attending Lane Tech High School as a Freshman</p>
-<br>
+<p>-I attended Saint CLement School for elementary school.</p>
 <p>-15 Years Old</p>
 <p>-Played basketball at Lane Tech</p>
-<p>-I really like shoes (I own a lot) and buy and sell them for profit</p>
+<p>-I really like shoes and buy and sell them for profit</p>
  <div id="demo" class="carousel slide" data-ride="carousel">
 
   <!-- Indicators -->
@@ -49,7 +49,7 @@
       <img src="https://pbs.twimg.com/profile_images/643179728313167872/VrGLYhNa.jpg">
     </div>
     <div class="carousel-item">
-         <a href="https://imgbb.com/"><img src="https://image.ibb.co/hF3Rhn/Screenshot_20170530_235832.jpg" alt="Screenshot_20170530_235832" border="0"></a>
+      <img src="https://www.stclementschool.org/uploaded/Compressed_Images/Picture_of_School.jpg" alt="Screenshot_20170530_235832" border="0"></a>
     </div>
     <div class="carousel-item">
       <a href="https://ibb.co/kaUMF7"><img src="https://preview.ibb.co/mGosNn/IMG_1505.jpg" alt="IMG_1505" border="0"></a>
