--- a/Final_Project/Page2.html
+++ b/Final_Project/Page2.html
@@ -30,7 +30,7 @@
 </head>
 <body>
    <a href="https://jkensik1.github.io/ECS21718/Final_Project/index.html" class="btn btn-info" role="button">Home</a>
-        <a href="#" class="btn btn-info" role="button">Shoes</a>
+        <a href="https://jkensik1.github.io/ECS21718/Final_Project/Page3.html" class="btn btn-info" role="button">Shoes</a>
 <div class="container-fluid bg-1 text-center">
   <h1>Basketball</h1>
   <img src="https://media.giphy.com/media/l41m18sayBFzhLwTS/giphy.gif" width="200" height="200">
